--- a/.gitignore
+++ b/.gitignore
@@ -2,15 +2,12 @@
 log/*.log
 tmp/**/*
 tmp/*
-!log/.keep
-!tmp/.keep
 *.swp
 .DS_Store
 public/assets
-public/packs
-public/packs-test
-node_modules
-.byebug_history
+
+# Ignore application configuration
+/config/application.yml
 /public/packs
 /public/packs-test
 /node_modules
