--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@rails/webpacker": "^3.0.1",
+    "iview": "^2.8.0",
     "vue": "^2.4.3",
     "vue-loader": "^13.0.4",
     "vue-template-compiler": "^2.4.3"
