--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "dependencies": {
     "@rails/webpacker": "^3.0.1",
+    "eslint": "^5.5.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.14.0",
     "iview": "^2.8.0",
     "vue": "^2.4.3",
     "vue-loader": "^13.0.4",
