--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,8 @@ public/assets
 /public/packs
 /public/packs-test
 /node_modules
+/public/packs
+/public/packs-test
+/node_modules
+yarn-debug.log*
+.yarn-integrity
