--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "dependencies": {
-    "@rails/webpacker": "^3.0.1",
+    "@rails/webpacker": "3.5",
     "eslint": "^5.5.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.14.0",
@@ -11,6 +11,6 @@
     "vuedraggable": "^2.16.0"
   },
   "devDependencies": {
-    "webpack-dev-server": "^2.8.0"
+    "webpack-dev-server": "2.11.2"
   }
 }
