--- a/package.json
+++ b/package.json
@@ -11,6 +11,6 @@
     "vuedraggable": "^2.16.0"
   },
   "devDependencies": {
-    "webpack-dev-server": "2.11.2"
+    "webpack-dev-server": "^2.11.1"
   }
 }
