--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.14.0",
     "iview": "^3.1.1-rc.1",
+    "sweetalert2": "^7.28.4",
     "vue": "^2.4.3",
     "vue-loader": "^13.0.4",
     "vue-template-compiler": "^2.4.3",
