--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,7 @@ public/assets
 /node_modules
 yarn-debug.log*
 .yarn-integrity
+
+# Ignore master key for decrypting credentials and more.
+/config/master.key
+/config/credentials.yml.enc
