--- a/config/storage.yml
+++ b/config/storage.yml
@@ -8,7 +8,5 @@ test:
 
 amazon:
   service: S3
-  access_key_id: ""
-  secret_access_key: ""
-  bucket: ""
-  region: "" # e.g. 'us-east-1'
+  bucket: "oishi-io-images"
+  region: "eu-west-3"
