--- a/.gitignore
+++ b/.gitignore
@@ -19,4 +19,6 @@ yarn-debug.log*
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
+
 /config/credentials.yml.enc
+/config/secrets.yml
