--- a/config/storage.yml
+++ b/config/storage.yml
@@ -8,5 +8,7 @@ test:
 
 amazon:
   service: S3
+  access_key_id: <%= Rails.application.credentials.dig(:aws, :access_key_id) %>
+  secret_access_key: <%= Rails.application.credentials.dig(:aws, :secret_access_key) %>
   bucket: "oishi-io-images"
   region: "eu-west-3"
