--- a/config/storage.yml
+++ b/config/storage.yml
@@ -4,7 +4,7 @@ local:
 
 test:
   service: Disk
-  root: <%= Rails.root.join("tmp/storage") %>
+  root: <%= Rails.root.join("storage") %>
 
 amazon:
   service: S3
